ci_cd/kubernetes_config/v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  guestbook
  labels:
    app:  guestbook
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app:  guestbook
