ci_cd/kubernetes_config/v1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    kubernetes.io/ingress.class: "citrix"
spec:
  rules:
  - host:  ameywebapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: guestbook
          servicePort: 80
